--- a/ack.tex
+++ b/ack.tex
@@ -1,22 +1,37 @@
 \section*{Acknowledgements}
-The work you are going to read would not have been possible without the support and the contribution of several people to whom I express my deepest gratitude.
+%The work you are going to read would not have been possible without the support and the contribution of several people to whom I express my deepest gratitude.
+%
+%I am extremely indebted to my advisors Prof. Wouter Joosen and Prof. Frank Piessens, who accepted me to be part of the DistriNet Research Group and who supported me until the end of this beautiful journey.  
+%
+%Not only to my advisors but also am I grateful to my examiners, Dr. Lieven Desmet, Prof. Nicola Zannone, Dr. Pieter Philippaerts, Prof. Danny Hughes, Prof. Vincent Rijmen and Prof. xxxxxxxx (FIXME chair), for having accepted to review my dissertation and who made it a better scientific document.
+%
+%I will always remember my colleagues Dr. Yves Younan, Nick Nikiforakis, Dr. Jan Tobias Muehlberg, Milica Milutinovic, Pieter Agten, Job Noorman, Dr. Frederic Vogel, Raoul Strackx and many others from the Department of Computer Science, with whom I have been sharing liters of coffee, kilos of chocolates and an indefinite amount of hours to discuss our ideas.
+%
+%I address my sincere gratitude to all members of the administration task force for their professional approach in solving the numerous issues and troubles that a PhD student can provide: Marleen Somers, Karen Verresen, Esther Renson, Liesbet Degent, Karin Michiels, Margot Peeters, Katrien Janssens and Ghita Saevels.
+%
+%A special thank goes to Sajjad Safaei, who reviewed the first draft of this work, and always surprised me with his personal and stylish English idioms. He did a great job even in hiding the tremendous boredom of the subject, not really suitable for an anthropologist.
+%
+%My deepest gratitude is addressed to my parents Marta and Domenico, my sister Jlenia and her family Antonio and Fabrizio - who will read this work as soon as he fixes the common issues of his first words - who have been patiently waiting for me to achieve my goals, accepting the compulsory and sometimes dreary distance that is separating us for such a long time.
+%
+%I must, of course, thank Valeria Contarino, Tomohiro Kosaka, Audrey Casier, Laura, Gwen and the long list of people I am most certainly forgetting, who unconsciously contributed to my work by convincing me of the fact that hills can only be climbed.  
+%
+%My journey continues. This time with a bigger luggage.
+%
+%Thank you.
 
-I am extremely indebted to my advisors Prof. Wouter Joosen and Prof. Frank Piessens, who accepted me to be part of the DistriNet Research Group and who supported me until the end of this beautiful journey.  
+%\null
+%\vfill
+%Francesco
+%July 2013
 
-Not only to my advisors but also am I grateful to my examiners, Dr. Lieven Desmet, Prof. Nicola Zannone, Dr. Pieter Philippaerts, Prof. Danny Hughes, Prof. Vincent Rijmen and the chair Prof. xxxxxxxx, for having accepted to review my dissertation and who made it a better scientific document.
 
-I will always remember my colleagues Dr. Yves Younan, Nick Nikiforakis, Dr. Jan Tobias Muehlberg, Milica Milutinovic, Pieter Agten, Job Noorman, Dr. Frederic Vogel, Raoul Strackx and many others from the Department of Computer Science, with whom I have been sharing liters of coffee, kilos of chocolates and an indefinite amount of hours to discuss our ideas.
+\newpage
 
-I address my sincere gratitude to all members of the administration task force for their professional approach in solving the numerous issues and troubles that a PhD student can provide: Marleen Somers, Karen Verresen, Esther Renson, Liesbet Degent, Karin Michiels, Margot Peeters, Katrien Janssens and Ghita Saevels.
+\null
+\vfill
+This research is partially funded by the Interuniversity
+Attraction Poles Programme Belgian State, Belgian Science Policy, the Research
+Fund KU Leuven and the EU FP7 project NESSoS.
 
-A special thank goes to Sajjad Safaei, who reviewed the first draft of this work, and always surprised me with his personal and stylish English idioms. He did a great job even in hiding the tremendous boredom of the subject, not really suitable for an anthropologist.
 
-My deepest gratitude is addressed to my parents Marta and Domenico, my sister Jlenia and her family Antonio and Fabrizio - who will read this work as soon as he fixes the common issues of his first words - who have been patiently waiting for me to achieve my goals, accepting the compulsory and sometimes dreary distance that is separating us for such a long time.
 
-I must, of course, thank Valeria Contarino, Tomohiro Kosaka, Audrey Casier, Laura, Gwen and the long list of people I am most certainly forgetting, who unconsciously contributed to my work by convincing me of the fact that hills can only be climbed.  
-
-My journey continues. This time with a bigger luggage.
-
-Thank you.
-Francesco
-July 2013
