--- a/hyperforce.tex
+++ b/hyperforce.tex
@@ -507,7 +507,7 @@ Despite the relatively small codebase size of Hyper-V and the expected complexit
 
 
 \paragraph{Xenon}
-A more recent attempt to formally verify a widely used hypervisor like Xen \cite{xen} is Xenon \cite{xenon}. In the aforementioned work, a formal security policy model is defined, starting from the original version of the Xen hypervisor. The authors argue they provide a robust information flow control, tamper-resistance and self-protection of the virtual machines (called execution environments) running on top of their hypervisor. 
+A more recent attempt to formally verify a widely used hypervisor like Xen \cite{xen} is Xenon \cite{formsecxenon}. In the aforementioned work, a formal security policy model is defined, starting from the original version of the Xen hypervisor. The authors argue they provide a robust information flow control, tamper-resistance and self-protection of the virtual machines (called execution environments) running on top of their hypervisor. 
 Their basic approach consists in confining each user community in its own execution environment and limiting the information flow between two environments to a restricted form of replication. Namely, an execution environment that is reading data from another environment, will only get access to a local copy of the data.
 The policy that allows or denies information flow between two execution environments is called \emph{security domain lattice}. 
 The Xenon formal security model is written in CSP, an algebra used to model non-interference and other trace-based information flow security policies. Moreover, CSP is well suited for reasoning about communication patterns between multiple threads of computation. These patterns are defined as sets of traces of instantaneous events and their duration is not modelled. 
