cover and intro

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,10 +1,17 @@
 \section*{Abstract}
 
-Computers that are connected to a network have become an integral part of our society and the idea of being continuously connected to the Internet is gaining more acceptance.  Contemporary computer networks are realized using a large number of heterogeneous access technologies, such as Ethernet, DSL, wireless Ethernet, UMTS, etc.   Additionally, network devices have become small enough to be carried around and are used to communicate in public places using publicly available access networks.
+The appearance of global Internet services like social networking, remote storage and mobile computing into marketplace, is consistently influencing the computing infrastructure. As systems become larger and more complex, the need to optimise the infrastructure in favour of reliability and redundancy becomes an imperative. Virtualisation technology seems to have partially fulfilled the needs dictated by growth - first of all physical space and energy consumption - by redefining the concept of infrastructure and paving the way for new business models such as cloud computing.
 
-Despite the availability of all these access technologies, well-equipped network devices and the use of carefully designed communication software, applications still run into problems when running in such mobile, heterogeneous network environments: network addresses and protocols change, network characteristics (bandwidth, jitter,\dots) fluctuate and network disconnections occur frequently.
+A consequence of this highly connected environment is that software bugs and malicious attacks can spread much faster and more effectively than it was in the past. Attacks to operating systems and the existence of permanently connected devices like smart phones are facilitating infections at a global scale. 
+Security researchers have been looking at virtualisation technology as an approach that can potentially find the solutions to the well known security problems of operating system kernels. As a matter of fact, successful low level attacks can circumvent or disable any countermeasure in place.
 
-These problems lead to four major challenges for the next generation mobility solutions:  First, the mobility solution must support both address and protocol changes. Secondly, when desired, applications must be kept aware of mobility events. Thirdly, switching to another access network must happen in a secure way. Fourthly, it must be possible to deploy the solution in a heterogeneous network where access technologies and communication protocols evolve quickly.
+Moreover, the tendency to shift current computer use to remote Internet services is making the web browser one of the most considerable actors of today. As a consequence, the web browser is gaining more and more attention from attackers, due to its prominent position within user's experience.
 
-This dissertation contributes a mobility solution architecture that addresses these challenges by introducing a session layer protocol in the protocol stack.  This architecture is realized by two systems:  the Connection Abstractions System (CAS) and the Address Management System (AMS).  The CAS defines a session as a logical communication channel between two applications.  Communication for a CAS session is realized using the transport protocols that are available at that time.  Transport protocol connections that are aborted as a consequence of mobility are replaced by new connections.  If this happens, the CAS maintains communication reliability and optionally informs the application.  The CAS's session protocol can authenticate the moving applications if that is desired.  Protocol changes are enabled by the AMS, which introduces the necessary concepts for developing network application development without prior knowledge of the available communication protocols.  Both systems are implemented and evaluated using the DiPS+ protocol stack framework.
+Despite the active contribution of researchers to mitigate the aforementioned security issues, one major challenge to focus in the immediate future consists in minimising the performance overhead, while guaranteeing the highest degree of security. Such a task seems achievable only by the puzzling tradeoff between performance and security that usually sacrifices the former in favour of the latter or vice versa.
+
+This dissertation contributes security mitigation techniques that address the aforementioned challenges. First, we focus on virtualisation technology to tackle the problem of operating system security. A countermeasure that relies on the cooperation between the target system and the virtualisation architecture, protects those critical memory locations within the target system that can be potentially compromised. Within the same field, a more general framework that protects operation systems by enforcing the execution of trusted code is presented.
+
+%Due to a number of features of virtualisation technology, such as hardware support, performance and strong isolation 
+
+Secondly, a security measure that improves web browser security against memory corruption attacks is provided. We also argue in favour of the role that virtualisation technology can play within such environments and discuss a realistic scenario for integrating our security countermeasure into similar software architectures delivered on demand, as in a cloud computing setting.
 
